--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
         <!--END ICON DIV-->
         
         <!--LIST OF LINKS FOR NAV-->
-        <div class="nav-links duration-500 md:static absolute bg-white md:min-h-fit min-h-[60vh] left-0 top-[-100%] md:w-auto w-full flex items-center px-5">
+        <div class="z-10 nav-links duration-500 md:static absolute bg-white md:min-h-fit min-h-[60vh] left-0 top-[-100%] md:w-auto w-full flex items-center px-5">
             <ul class="flex md:flex-row flex-col md:items-center md:gap-[4vw] gap-8">
                 <li>
                     <a class="hover:text-slate-200 hover:bg-blue-600 p-2 hover:rounded-tl-lg hover:rounded-br-lg hover:drop-shadow-lg" href="index.html">Home</a>
@@ -43,7 +43,7 @@
         <!--END LIST OF LINKS FOR NAV-->
 
         <!--START MENU ICON-->
-        <div class="flex itmes-center gap-6">
+        <div class="z-10 flex itmes-center gap-6">
             <ion-icon onclick="onToggleMenu(this)" name="menu" class="text-3xl cursor-pointer md:hidden"></ion-icon>
         </div>
         <!--END MENU ICON-->
@@ -71,7 +71,7 @@
                     <div class="overflow-hidden bg-cover rounded-lg cursor-pointer h-96 group"
                         style="background-image:url('https://images.unsplash.com/photo-1621111848501-8d3634f82336?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1565&q=80')">
                         <div
-                            class="flex flex-col justify-center w-full h-full px-8 py-4 transition-opacity duration-700 opacity-0 backdrop-blur-sm bg-gray-800/60 group-hover:opacity-100">
+                            class="z-0 flex flex-col justify-center w-full h-full px-8 py-4 transition-opacity duration-700 opacity-0 backdrop-blur-sm bg-gray-800/60 group-hover:opacity-100">
                             <h2 class="mt-4 text-xl font-semibold text-white capitalize">Best website collections</h2>
                             <p class="mt-2 text-lg tracking-wider text-blue-400 uppercase ">Website</p>
                         </div>
@@ -80,7 +80,7 @@
                     <div class="overflow-hidden bg-cover rounded-lg cursor-pointer h-96 group"
                         style="background-image:url('https://images.unsplash.com/photo-1621609764180-2ca554a9d6f2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=764&q=80')">
                         <div
-                            class="flex flex-col justify-center w-full h-full px-8 py-4 transition-opacity duration-700 opacity-0 backdrop-blur-sm bg-gray-800/60 group-hover:opacity-100">
+                            class="z-0 flex flex-col justify-center w-full h-full px-8 py-4 transition-opacity duration-700 opacity-0 backdrop-blur-sm bg-gray-800/60 group-hover:opacity-100">
                             <h2 class="mt-4 text-xl font-semibold text-white capitalize">Block of Ui kit collections</h2>
                             <p class="mt-2 text-lg tracking-wider text-blue-400 uppercase ">Ui kit</p>
                         </div>
@@ -89,7 +89,7 @@
                     <div class="overflow-hidden bg-cover rounded-lg cursor-pointer h-96 group"
                         style="background-image:url('https://images.unsplash.com/photo-1531403009284-440f080d1e12?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80')">
                         <div
-                            class="flex flex-col justify-center w-full h-full px-8 py-4 transition-opacity duration-700 opacity-0 backdrop-blur-sm bg-gray-800/60 group-hover:opacity-100">
+                            class="z-0 flex flex-col justify-center w-full h-full px-8 py-4 transition-opacity duration-700 opacity-0 backdrop-blur-sm bg-gray-800/60 group-hover:opacity-100">
                             <h2 class="mt-4 text-xl font-semibold text-white capitalize">Ton’s of mobile mockup</h2>
                             <p class="mt-2 text-lg tracking-wider text-blue-400 uppercase ">Mockups</p>
                         </div>
