Edited the footer

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </a>
         
             <!--WILL WORK ON COPYRIGHT LATER-->
-            <!--<p class="text-sm text-gray-600 dark:text-gray-300">© Copyright 2021. All Rights Reserved.</p>-->
+            <p class="text-sm text-gray-600 dark:text-gray-300">Designed & Built by Sarah Perez-Anderson</p>
         
             <div class="flex -mx-2">
 
