--- a/gallery.html
+++ b/gallery.html
@@ -274,6 +274,11 @@
                     <ion-icon class="w-5 h-5" name="logo-instagram"></ion-icon>
                 </a>
 
+                <!--CODEPEN ICON LINK-->
+                <a href="#" class="mx-2 text-gray-600 transition-colors duration-300 dark:text-gray-300 hover:text-slate-900 dark:hover:text-blue-400" aria-label="Github">
+                    <ion-icon class="w-5 h-5" name="logo-codepen"></ion-icon>
+                </a>
+
             </div>
         </div>
     </footer>
