--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,7 @@
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
     <title>Document</title>
 </head>
+
 <body class="bg-blue-600">
     <header class="bg-white p-4">
         <!--START OF NAVIGATION MENU-->
@@ -167,6 +168,11 @@
                 <!--INSTAGRAM ICON LINK-->
                 <a href="#" class="mx-2 text-gray-600 transition-colors duration-300 dark:text-gray-300 hover:text-pink-600 dark:hover:text-blue-400" aria-label="Github">
                     <ion-icon class="w-5 h-5" name="logo-instagram"></ion-icon>
+                </a>
+
+                <!--CODEPEN ICON LINK-->
+                <a href="#" class="mx-2 text-gray-600 transition-colors duration-300 dark:text-gray-300 hover:text-slate-900 dark:hover:text-blue-400" aria-label="Github">
+                    <ion-icon class="w-5 h-5" name="logo-codepen"></ion-icon>
                 </a>
 
             </div>
