--- a/portfolio.html
+++ b/portfolio.html
@@ -126,9 +126,9 @@
 
     <footer class="bg-white dark:bg-gray-900">
         <div class="container flex flex-col items-center justify-between p-6 mx-auto space-y-4 sm:space-y-0 sm:flex-row">
-            <a href="#">
+            <!--<a href="#">
                 <img class="w-auto h-7" src="https://merakiui.com/images/full-logo.svg" alt="">
-            </a>
+            </a>-->
         
             <!--WILL WORK ON COPYRIGHT LATER-->
             <p class="text-sm text-gray-600 dark:text-gray-300">Designed & Built by Sarah Perez-Anderson</p>
